# AudioCaptureKit

./: .editorconfig  .gitattributes  .gitignore  .swiftformat  .swiftlint.yml  CLAUDE.md  Package.resolved  Package.swift  README.md  SECURITY.md
.beads/: issues.jsonl
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  rust-security.yml  scorecard.yml  security.yml  soak.yml
25/be52c9af61/: metadata.json
34/6048f2bc70/: metadata.json
5d/8614470e87/: metadata.json
5f/8187b5e95a/: metadata.json
5f/decde2089a/: metadata.json
63/52432c4d0c/: metadata.json
71/5a526b4aa5/: metadata.json
78/8746f8c8bf/: metadata.json
93/24d4ea94e3/: metadata.json
98/c3c082fa1e/: metadata.json
9a/4496690190/: metadata.json
Examples/windows/SampleApp/src-tauri/: Cargo.toml  tauri.conf.json
Examples/windows/SampleApp/src-tauri/capabilities/: default.json
Examples/windows/SampleApp/src-tauri/src/: audio_state.rs  commands.rs  demo_encryptor.rs  main.rs
Tests/AudioCaptureKitTests/: EncryptionTests.swift  RecordingMetadataTests.swift
archive/: Cargo.toml  rustfmt.toml
archive/tauri-sample-app/: package-lock.json
csharp/AudioCapture/: AudioCapture.csproj
csharp/AudioCapture.Tests/: AesGcmEncryptorTests.cs  AudioCapture.Tests.csproj  CaptureSoakTests.cs  CaptureStateTests.cs  EncryptedWavWriterTests.cs  FileWaveInTests.cs  MarkerAnalysis.cs  SignalGeneratorSoakTests.cs  StereoMixerTests.cs  SystemAudioNormalizerTests.cs  WasapiCaptureSessionInjectionTests.cs  WriteSerializationTests.cs
docs/: API.md  Android-CAPTURE.md  DIARIZATION.md  iOS-CAPTURE.md
e1/0d28606901/: metadata.json
fc/ae4579e168/: metadata.json
macOS/: .swiftformat  .swiftlint.yml
windows/: Cargo.toml  deny.toml
windows/audio-capture-core/: Cargo.toml
windows/audio-capture-core/src/: lib.rs
windows/audio-capture-core/src/models/: audio_models.rs  config.rs  error.rs  mixing_strategy.rs  mod.rs  recording_result.rs  state.rs
windows/audio-capture-core/src/processing/: ring_buffer.rs  stereo_mixer.rs  wav_format.rs
windows/audio-capture-core/src/session/: composite.rs
windows/audio-capture-core/src/storage/: encrypted_writer.rs
windows/audio-capture-core/src/traits/: capture_provider.rs  encryptor.rs
windows/audio-capture-windows/: Cargo.toml
windows/audio-capture-windows/src/: device_enumerator.rs  permissions.rs  wasapi_loopback.rs  wasapi_mic.rs
(+199 files in other folders)
