[package]
name = "audio-capture-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Windows WASAPI backend for audio-capture-kit"

[dependencies]
audio-capture-core = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }
